test/spec_vectors/local_get/fail/module_9.wat
(module (func $type-empty-vs-f32 (local f32) (local.get 0)))